<resources>
    <string name="app_name">PS Adviser</string>

    <!--Tab Captions -->
    <string name="familytab_title">Families</string>
    <string name="maptab_title">Map</string>
    <string name="socialtab_title">Social</string>
    <string name="settingstab_title">Settings</string>

    <!--Top Bar Strings-->
    <string name="topbar_synclabel">Sync status</string>
    <string name="topbar_synclabel_syncing">Syncing…</string>
    <string name="topbar_synclabel_offline">Offline</string>
    <string name="topbar_lastsync_prefix">Last Sync:\u0020</string>
    <string name="topbar_lastsync_never">Not synced yet</string>

    <string name="navigate_continue">Continue</string>
    <string name="navigate_next">Next</string>
    <string name="navigate_skip">Skip</string>
    <string name="navigate_back">Back</string>

    <string name="all_required">This field is required</string>
    <string name="all_save">Save</string>
    <string name="all_new">New</string>
    <string name="all_okay">Okay</string>
    <string name="all_complete">Complete</string>

    <string name="all_underconstruction">Under Construction</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_confirmation_question">Ready to submit?</string>

    <string name="logout_title">Oops! You can\'t log out</string>
    <string name="logout_description">Please make sure you have internet connection and try again later</string>

    <!-- Login Activity -->
    <string name="login_username">Username</string>
    <string name="login_passwordprompt">Password</string>
    <string name="login_action_signin">Login</string>
    <string name="login_incorrectcredentials">Hmm, that username or password didn\'t work.</string>
    <string name="login_serverprod" translatable="false">Production</string>
    <string name="login_serverdemo" translatable="false">FP: Demo Server</string>
    <string name="login_servertest" translatable="false">FP: Test Server</string>

    <!-- App intro -->
    <string name="intro_welcome_title">Welcome!</string>
    <string name="intro_welcome_description">New here? Take a look around</string>
    <string name="intro_shake_title">Shake to Send Feedback</string>
    <string name="intro_shake_description">To suggest feedback, report bugs, or ask questions, just shake your device. Give it a try!</string>
    <string name="intro_viewfamilies_title">View Families</string>
    <string name="intro_viewfamilies_description">All of the families you work with, at a glance. They’re all sorted by the last time they were changed. If you want to find a specific family, use the search bar on top!</string>
    <string name="intro_surveys_title">Administer Surveys</string>
    <string name="intro_surveys_description">Survey new families, or resurvey existing families, to determine their level of poverty. You can go back to any question at any time during the survey</string>
    <string name="intro_priorities_title">Monitor Priorities</string>
    <string name="intro_priorities_description">After taking a survey, families have the opportunity to define priorities and achievements. These can be viewed on the family’s profile at any time</string>
    <string name="intro_more_title">And more coming soon…</string>
    <string name="intro_more_description">We will continue to actively develop the platform and plan on adding new features over time! Soon, you will be able to store photos of families and share them with your colleagues</string>


    <!-- Indicator Card -->
    <string name="indicator_selected">Selected</string>

    <!-- Survey  -->
    <string name="all_snapshot_in_progress">Snapshot in Progress</string>
    <string name="survey_newfamily">New Family</string>
    <string name="surveyintro_newsnapshot">New Snapshot</string>
    <string name="surveyintro_availablesurveys">Available Surveys</string>
    <string name="surveyintro_family">%1$s Family</string>
    <string name="surveyquestions_economic_title">Economic Questions</string>
    <string name="survey_summary_title">Review Indicators</string>
    <string name="survey_questionsremaining">%1$d Remaining</string>
    <string name="survey_questionsskippedandremaining">%1$d Skipped, %2$d Remaining</string>
    <string name="survey_questionsskipped">Skipped</string>
    <string name="survey_error_no_surveys_title">No Surveys Available</string>
    <string name="survey_error_no_surveys_description">There are currently no surveys available. Resync the application
        and try again.
    </string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="surveyactivity_exit_explanation">You will be able to resume the snapshot in progress later.</string>
    <string name="survey_chooselocation">Choose Location</string>
    <string name="surveyreview_noresponse">No Response</string>
    <string name="resumesnapshotpopup_dismiss">Dismiss</string>
    <string name="your_response">Your response…</string>
    <string name="your_responses">Your Responses</string>
    <string name="priorities_exit_explanation">Your changes will be lost.</string>

    <!-- Survey Summary -->
    <string name="survey_summary_backgroundtitle">Family Record</string>
    <string name="survey_summary_indicatortitle">Indicators</string>
    <string name="survey_summary_questionsleft">Questions Unanswered</string>
    <string name="survey_summary_submit">Submit</string>
    <string name="survey_summary_confirmation_details">Thank you for taking our survey!</string>

    <!-- Family Details -->
    <string name="familydetails_phonenumberdefault">No Phone Number</string>
    <string name="priorities">Priorities</string>

    <!--Settings-->
    <string name="logout">Log Out</string>
    <string name="settings_releasenumber">Release Number</string>
    <string name="settings_releasenumber_error">Error Retrieving Release Number</string>
    <string name="settings_nousername">No Username</string>

    <!-- Priorities -->
    <string name="no_priorities">No Priorities</string>
    <string name="priority_problem">Problem</string>
    <string name="priority_solution">Solution</string>
    <string name="priority_estimatedcompletion">Estimated Date</string>
    <string name="priorities_listcounttitle">Current Priorities</string>

    <string name="prioritypopup_whenquestion">How many months will it take?</string>
    <string name="prioritypopup_strategyquestion">What will you do to get it?</string>
    <string name="prioritypopup_whyquestion">Why don\'t you have it?</string>

    <string name="prioritypopup_achievementhow">What did it take to achieve this?</string>
    <string name="prioritypopup_achievementwhat">How did you do it?</string>

    <string name="prioritieslist_header">Your Priorities</string>
    <string name="prioritychooser_greenselected">Choose a Red or Yellow Indicator</string>
    <string name="life_map_title">Life Map</string>

    <string name="priorites_empty_title">No Priorities Yet</string>
    <string name="priorities_empty_body"> Choose a Red or Yellow indicator to add a priority.\n\nChoose a Green priority to record something you’re proud of.</string>

    <!--Other-->
    <string name="cd_profile_picture">Profile Picture</string>
    <string name="cd_surveyexit">Exit Survey</string>
    <string name="cd_numberstepper_plus">Increment Value</string>
    <string name="cd_numberstepper_minus">Decrement Value</string>

    <string name="spinner_placeholder">Select an option&#8230;</string>
    <string name="familydetail_nullmember_title">This Family Can\'t Be Resurveyed</string>
    <string name="familydetail_nullmember_content">Resurveying this family isn\'t currently supported. Don\'t worry, we
        are aware of the problem and will have it fixed soon. (Issue: #257)
    </string>

    <!--App Limits-->
    <string name="snapshots_limit_medium">You\'ve reached %d\%% of app capacity for families information</string>
    <string name="snapshots_limit_high">You\'ve reached %.d\%% of app capacity for families information. Please reach for an stable internet connection to sync your data</string>
    <string name="snapshot_limit_reach">You\'ve reached the maximum capacity for families information. Please reach for an stable internet connection to sync your data</string>
    <string name="survey_disable">Survey taking is disable</string>
    <string name="sync_require">Synchronization is require</string>
    <string name="attention_title">Attention</string>

    <!-- Not Translated -->
    <string name="family_imagePlaceholder" translatable="false">
        https://s3.us-east-2.amazonaws.com/fp-psp-images/44-3.jpg
    </string>
    <string name="syncing_families">Syncing %d of %d families</string>
    <string name="syncing_surveys">Syncing %d of %d surveys</string>
    <string name="syncing_snapshots">Syncing %d of %d snapshots</string>
    <string name="syncing_images">Syncing %d of %d images</string>
    <string name="syncing_family_snapshots">Syncing %d of %d snapshots</string>
    <string name="login_error">Wrong credentials</string>
    <string name="add_snapthot">Add snapthot</string>
</resources>
